--- a/lib_base/src/main/res/values/styles.xml
+++ b/lib_base/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFullscreen">false</item>
 
         <item name="chipStyle">@style/chipStyle</item>
         <item name="chipGroupStyle">@style/chipGroupStyle</item>
@@ -40,7 +40,8 @@
         <item name="textColorSecondary">#BCBEC0</item>
         <item name="textColorHighlight">#80993C</item>
         <item name="textColorCalendar">#D9D9DC</item>
-        <item name="backgroundColor">@color/backgroundColor</item>
+<!--        tood 恢复-->
+        <item name="backgroundColor">@color/darkkhaki</item>
         <item name="backgroundColorSecondary">@color/backgroundColorSecondary</item>
     </style>
 
@@ -91,6 +92,70 @@
         <item name="android:padding">0dp</item>
     </style>
 
+
+
+
+
+
+
+    <!--全局使用了 shape的 样式-->
+    <style name="shape_et_style">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:minHeight">@dimen/edit_min_height</item>
+        <item name="android:textColorHint">?attr/textColorHint</item>
+        <item name="android:textSize">@dimen/sp_20</item>
+        <item name="shape_solidColor">@color/white</item>
+        <item name="shape_strokeColor">@color/darkblue</item>
+        <item name="shape_strokeWidth">@dimen/dp_1</item>
+        <item name="android:paddingStart">@dimen/dp_10</item>
+        <item name="android:paddingEnd">@dimen/dp_10</item>
+        <item name="shape_radius">@dimen/dp_8</item>
+    </style>
+
+    <!--全局使用 shapebutton 的样式-->
+    <style name="shape_btn_style">
+        <item name="shape_textColor">@color/white</item>
+        <item name="android:minHeight">@dimen/dp_60</item>
+        <item name="android:textSize">@dimen/sp_23</item>
+        <item name="android:textStyle">bold</item>
+        <item name="shape_solidColor">@color/gold</item>
+        <item name="shape_radius">@dimen/dp_38</item>
+        <item name="shape_solidPressedColor">@color/yellow</item>
+        <item name="shape_textPressedColor">@color/black</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+
+    <style name="shape_btn_style_confirm">
+        <item name="shape_textColor">@color/white</item>
+        <item name="android:minHeight">@dimen/dp_40</item>
+        <item name="android:textSize">@dimen/sp_23</item>
+        <item name="android:textStyle">bold</item>
+        <item name="shape_radius">@dimen/dp_8</item>
+        <item name="shape_startColor">@color/royalblue</item>
+        <item name="shape_endColor">@color/darkblue</item>
+        <item name="shape_solidPressedColor">@color/royalblue</item>
+        <item name="android:gravity">center</item>
+        <item name="shape_solidDisabledColor">@color/azure</item>
+        <item name="shape_textDisabledColor">@color/black</item>
+    </style>
+
+
+    <style name="shape_btn_style_cancel">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:minHeight">@dimen/dp_40</item>
+        <item name="android:textSize">@dimen/sp_23</item>
+        <item name="android:textStyle">bold</item>
+        <item name="shape_radius">@dimen/dp_8</item>
+        <item name="shape_startColor">@color/indianred</item>
+        <item name="shape_endColor">@color/maroon</item>
+        <item name="shape_solidPressedColor">@color/indianred</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+
+
+
     <style name="buttonBarNegativeButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
         <item name="android:textColor">#333333</item>
         <item name="android:layout_width">wrap_content</item>
@@ -111,7 +176,6 @@
 
 
     <style name="checkboxStyle" parent="Widget.AppCompat.CompoundButton.CheckBox">
-        <item name="android:button">@drawable/select_check_box_master</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingStart">8dp</item>
@@ -120,7 +184,6 @@
 
 
     <style name="radioButtonStyle" parent="Widget.AppCompat.CompoundButton.RadioButton">
-        <item name="android:button">@drawable/selector_radio_button</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#575042</item>
         <item name="android:paddingLeft">8dp</item>
@@ -185,5 +248,44 @@
     </style>
 
     <!--dialog样式的activity-->
+
+
+
+    <!--启动的背景页面-->
+    <style name="AppTheme.Lunch" parent="AppTheme">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@drawable/shape_main_bg</item>
+    </style>
+
+
+    <!--    <style name="SwitchButtonStyleMD" parent="SwitchButtonMD">-->
+    <!--        <item name="android:paddingStart">10dp</item>-->
+    <!--        <item name="android:paddingEnd">10dp</item>-->
+    <!--        <item name="android:paddingTop">4dp</item>-->
+    <!--        <item name="android:paddingBottom">4dp</item>-->
+    <!--    </style>-->
+
+    <!--    &lt;!&ndash; SwitchButton &ndash;&gt;-->
+    <!--    <style name="SwitchButtonStyle">-->
+    <!--        <item name="android:paddingStart">?attr/xui_config_content_spacing_horizontal</item>-->
+    <!--        <item name="android:paddingEnd">?attr/xui_config_content_spacing_horizontal</item>-->
+    <!--        <item name="android:paddingTop">?attr/xui_config_content_spacing_vertical</item>-->
+    <!--        <item name="android:paddingBottom">?attr/xui_config_content_spacing_vertical</item>-->
+    <!--    </style>-->
+
+
+    <!-- 自定义默认二维码扫描界面的主题. -->
+    <style name="XQRCodeTheme.Custom">
+        <item name="ViewfinderViewStyle">@style/ViewfinderView.Custom</item>
+    </style>
+
+    <!--扫描二维码相关-->
+    <style name="ViewfinderView.Custom">
+        <item name="inner_corner_color">#123456</item>
+        <item name="inner_corner_length">50dp</item>
+        <item name="inner_corner_width">5dp</item>
+        <item name="inner_scan_speed">5dp</item>
+        <item name="inner_scan_isCircle">false</item>
+    </style>
 
 </resources>
