--- a/lib_base/src/main/res/layout/view_state_layout_empty.xml
+++ b/lib_base/src/main/res/layout/view_state_layout_empty.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_state_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/state_layout_background_color"
     android:gravity="center"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:ignore="HardcodedText">
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2" />
+    android:orientation="vertical">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/zt_zwnr" />
+        android:layout_width="@dimen/state_layout_placeholder_image_size"
+        android:layout_height="@dimen/state_layout_placeholder_image_size"
+        android:src="?attr/empty_image_src"
+        tools:background="#666" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="暂无内容"
-        android:textColor="@color/color_c7c7c9"
-        android:textSize="@dimen/sp_18" />
-
-    <Space
+        android:id="@+id/tv_empty_title"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="@string/state_layout_empty_title"
+        android:textColor="@color/state_layout_title_color"
+        android:textSize="@dimen/state_layout_title_size" />
+
+    <TextView
+        android:id="@+id/tv_empty_subtitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/state_layout_empty_subtitle"
+        android:textColor="@color/state_layout_subtitle_color"
+        android:textSize="@dimen/state_layout_subtitle_size" />
 
 </LinearLayout>
