--- a/app/src/main/res/layout/rv_item_msg.xml
+++ b/app/src/main/res/layout/rv_item_msg.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
+    android:background="@color/white"
     android:paddingTop="@dimen/dp_10"
     android:paddingBottom="@dimen/dp_10">
 
