--- a/lib_base/src/main/res/layout/view_state_layout_offline.xml
+++ b/lib_base/src/main/res/layout/view_state_layout_offline.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_state_container"
     android:layout_width="match_parent"
@@ -9,27 +10,27 @@
     android:orientation="vertical">
 
     <ImageView
+        android:src="?attr/offline_image_src"
         android:layout_width="@dimen/state_layout_placeholder_image_size"
         android:layout_height="@dimen/state_layout_placeholder_image_size"
-        android:src="?attr/empty_image_src"
         tools:background="#666" />
 
     <TextView
-        android:id="@+id/tv_empty_title"
+        android:id="@+id/tv_offline_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="12dp"
-        android:text="@string/state_layout_empty_title"
+        android:text="@string/state_layout_offline_title"
         android:textColor="@color/state_layout_title_color"
         android:textSize="@dimen/state_layout_title_size" />
 
     <TextView
-        android:id="@+id/tv_empty_subtitle"
+        android:id="@+id/tv_offline_subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/state_layout_empty_subtitle"
+        android:text="@string/state_layout_offline_subtitle"
         android:textColor="@color/state_layout_subtitle_color"
         android:textSize="@dimen/state_layout_subtitle_size" />
 
