--- a/lib_base/src/main/res/values/styles.xml
+++ b/lib_base/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- 系统主题样式 -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -13,8 +13,11 @@
         <item name="editTextStyle">@style/editTextStyle</item>
 
 
-        <item name="empty_res">@layout/view_state_layout_empty</item>
-
+        <!--多状态布局图标-->
+        <item name="empty_image_src">@drawable/ic_empty_data</item>
+        <item name="failure_image_src">@drawable/ic_network_error</item>
+        <item name="offline_image_src">@drawable/ic_no_network</item>
+        <!--多状态布局图标-->
 
         <item name="android:textAllCaps">false</item>
         <item name="android:editTextStyle">@style/editTextStyle</item>
@@ -252,7 +255,7 @@
 
 
     <!--启动的背景页面-->
-    <style name="AppTheme.Lunch" parent="AppTheme">
+    <style name="AppTheme.Lunch" parent="BaseAppTheme">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowBackground">@drawable/shape_main_bg</item>
     </style>
