--- a/app/src/main/res/layout/dialog_use_vb.xml
+++ b/app/src/main/res/layout/dialog_use_vb.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ruffian.library.widget.RLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/dp_126"
+    app:background_normal="@color/white"
+    android:gravity="center"
+    app:corner_radius="10dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
+    <com.ruffian.library.widget.RTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@color/colorAccent"
+        android:id="@+id/tv_dialog"
+        android:gravity="center"
         android:text="use vb in a dialog" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.ruffian.library.widget.RLinearLayout>
